# simple

./: CLAUDE.md  Cargo.toml  setup_deps.sh
.cargo/: config.toml
src/: lib.rs  main.rs  metronome.rs
src/visual_effects/: beat_bars.rs  composite.rs  mod.rs  pulsing_circle.rs  spiral.rs  wave.rs  zoom_feedback.rs
