[package]
name = "simple"
version = "0.1.0"
edition = "2024"

[dependencies]
sdl3 = { version = "0", features = ["ttf"] }
sdl3-sys = "0.4.7"
sdl3-ttf-sys = "0.1.2"
midir = "0.5"

# korg_nano_kontrol_2 dependency:
# - On Linux: Use path dependency (git has libgit2 issues on some systems)
# - On macOS: Either works, but git is more convenient
# Run ./setup_deps.sh to clone the dependency if using path
korg_nano_kontrol_2 = { path = "../korg_nano_kontrol_2" }
# korg_nano_kontrol_2 = { git = "https://github.com/JoshuaBatty/korg_nano_kontrol_2.git" }
